cluster/apps/network/external-services/files/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app files
spec:
  externalName: "${NAS_ADDRESS}"
  ports:
    - name: http
      port: &port 7001
      protocol: TCP
      targetPort: *port
  type: ExternalName
