cluster/apps/network/external-services/files/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app files
  annotations:
    external-dns.alpha.kubernetes.io/target: hsv-1.theburnh.am
    external-dns/is-public: 'true'
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
    - host: &host "files.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: *app
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
